deployment/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-api
  labels:
    app:
      sentiment-api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: sentiment-analyser
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sentiment-analyser
  name: sentiment-analyser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentiment-analyser
  template:
    metadata:
      labels:
        app: sentiment-analyser
    spec:
      containers:
      - image: gcr.io/reddit-sentiment-343307/reddit-sentiment-app:latest
        name: sentiment-analyser
