deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-api
  labels:
    app:
      sentiment-api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: sentiment-analyser
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sentiment-analyser
  name: sentiment-analyser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentiment-analyser
  template:
    metadata:
      labels:
        app: sentiment-analyser
    spec:
      containers:
      - image: sentiment-analyser
        name: sentiment-analyser
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sentiment-ui
  name: sentiment-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentiment-ui
  template:
    metadata:
      labels:
        app: sentiment-ui
    spec:
      containers:
      - image: sentiment-ui
        name: sentiment-ui
---
apiVersion: v1
kind: Service
metadata:
  name: sentiment-app
  labels:
    app:
      sentiment-app
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: sentiment-ui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress  
  annotations:
    kubernetes.io/ingress.class: "nginx"  
spec:
  rules:
  - http:
      paths:
        - path: /comments/
          pathType: Prefix
          backend:
            service:
              name: sentiment-api
              port:
                number: 8000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sentiment-app
              port:
                number: 3000
