deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress  
  annotations:
    kubernetes.io/ingress.class: "nginx"  
spec:
  host: william.bilsdon.com
  rules:
  - http:
      paths:
        - path: /comments/
          pathType: Prefix
          backend:
            service:
              name: sentiment-api
              port:
                number: 8000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sentiment-app
              port:
                number: 3000
